k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-redis
  template:
    metadata:
      labels:
        app: go-redis
    spec:
      containers:
        - name: go-redis
          image: redis
          resources:
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: go-redis-service
spec:
  selector:
    app: go-redis
  porgo:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
