k8s/subscriptions-pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: subscriptions-postgres
  template:
    metadata:
      labels:
        component: subscriptions-postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: subscriptions-postgres-service
spec:
  type: ClusterIP
  selector:
    component: subscriptions-postgres
  ports:
    - port: 5432
      targetPort: 5432
